--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>CSS Fields</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='normalize.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
 
