--- a/index.html
+++ b/index.html
@@ -1,10 +1,163 @@
 <html>
   <head>
     <title>CSS Fields</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,700' rel='stylesheet' type='text/css'>
     <link href='normalize.css' rel='stylesheet' type='text/css'>
+    <style>
+      body { color: #2c3e50; font-family: 'Roboto', sans-serif; font-weight: 100; font-size: 18px; }
+      .fieldgroup {
+        width: 100%;
+        height: 300px;
+        background: #ecf0f1;
+        padding: 50px;
+        color: #ecf0f1;
+        display: block;
+      }
+      header {
+        height: 300px;
+        background: #ecf0f1;
+        padding: 50px;
+      }
+      .fg1 { background: #1abc9c; }
+      .fg2 { background: #3498db; }
+      .fg3 { background: #9b59b6; }
+      .fg4 { background: #e74c3c; }
+      .fg5 { background: #e67e22; }
+      .fg6 { background: #f1c40f; }
+
+      * {
+        box-sizing: border-box;
+      }
+      .field{ float: left; }
+    </style>
+    <link href='dist/styles/main.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <header>
+      <h1>CSS Fields</h1>
+      <p>
+        Choose your Fieldgroup!
+      </p>
+    </header>
+    <!-- Fieldgroup 1 -->
+    <div class="fieldgroup fg1">
+      <h2>Normal</h2>
+      <div class="css-field-wrap">
+        <div class="css-field field-normal">
+          <input id="field_1_1" type="text">
+          <label for="field_1_1">Banana</label>
+        </div>
+        <div class="css-field field-normal">
+          <input id="field_1_2" type="text">
+          <label for="field_1_2">Strawberry</label>
+        </div>
+        <div class="css-field field-normal">
+          <input id="field_1_3" type="text">
+          <label for="field_1_3">Avocado</label>
+        </div>
+      </div>
+      <div style="clear: both"></div>
+    </div>
+
+    <!-- Fieldgroup 2 -->
+    <div class="fieldgroup fg2">
+      <h2>Collapse</h2>
+      <div class="css-field-wrap">
+        <div class="css-field field-collapse">
+          <input id="field_2_1" type="text">
+          <label for="field_2_1">Banana</label>
+        </div>
+        <div class="css-field field-collapse">
+          <input id="field_2_2" type="text">
+          <label for="field_2_2">Strawberry</label>
+        </div>
+        <div class="css-field field-collapse">
+          <input id="field_2_3" type="text">
+          <label for="field_2_3">Avocado</label>
+        </div>
+      </div>
+      <div style="clear: both"></div>
+    </div>
+
+    <!-- Fieldgroup 3 -->
+    <div class="fieldgroup fg3">
+      <h2>Bounce</h2>
+      <div class="css-field-wrap">
+        <div class="css-field field-bounce">
+          <input id="field_3_1" type="text">
+          <label for="field_3_1">Banana</label>
+        </div>
+        <div class="css-field field-bounce">
+          <input id="field_3_2" type="text">
+          <label for="field_3_2">Strawberry</label>
+        </div>
+        <div class="css-field field-bounce">
+          <input id="field_3_3" type="text">
+          <label for="field_3_3">Avocado</label>
+        </div>
+      </div>
+      <div style="clear: both"></div>
+    </div>
+
+    <!-- Fieldgroup 4 -->
+    <div class="fieldgroup fg4">
+      <h2>Slide</h2>
+      <div class="css-field-wrap">
+        <div class="css-field field-slide">
+          <input id="field_4_1" type="text">
+          <label for="field_4_1">Banana</label>
+        </div>
+        <div class="css-field field-slide">
+          <input id="field_4_2" type="text">
+          <label for="field_4_2">Strawberry</label>
+        </div>
+        <div class="css-field field-slide">
+          <input id="field_4_3" type="text">
+          <label for="field_4_3">Avocado</label>
+        </div>
+      </div>
+      <div style="clear: both"></div>
+    </div>
+
+    <!-- Fieldgroup 2 -->
+    <div class="fieldgroup fg5">
+      <h2>Fall</h2>
+      <div class="css-field-wrap">
+        <div class="css-field field-fall">
+          <input id="field_5_1" type="text">
+          <label for="field_5_1">Banana</label>
+        </div>
+        <div class="css-field field-fall">
+          <input id="field_5_2" type="text">
+          <label for="field_5_2">Strawberry</label>
+        </div>
+        <div class="css-field field-fall">
+          <input id="field_5_3" type="text">
+          <label for="field_5_3">Avocado</label>
+        </div>
+      </div>
+      <div style="clear: both"></div>
+    </div>
+
+    <!-- Fieldgroup 2 -->
+    <div class="fieldgroup fg6">
+      <h2>Flip</h2>
+      <div class="css-field-wrap">
+        <div class="css-field field-flip">
+          <input id="field_6_1" type="text">
+          <label for="field_6_1">Banana</label>
+        </div>
+        <div class="css-field field-flip">
+          <input id="field_6_2" type="text">
+          <label for="field_6_2">Strawberry</label>
+        </div>
+        <div class="css-field field-flip">
+          <input id="field_6_3" type="text">
+          <label for="field_6_3">Avocado</label>
+        </div>
+      </div>
+      <div style="clear: both"></div>
+    </div>
 
   </body>
 </html>
