textfield aniamtion normal

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,700' rel='stylesheet' type='text/css'>
     <link href='normalize.css' rel='stylesheet' type='text/css'>
     <style>
-      body { color: #2c3e50; font-family: 'Roboto', sans-serif; font-weight: 100; font-size: 18px; }
+      body { color: #34495e; font-family: 'Roboto', sans-serif; font-weight: 100; font-size: 18px; }
       .fieldgroup {
         width: 100%;
         height: 300px;
