fixing labeltext, new animation -> bounce

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
       <div class="css-field-wrap">
         <div class="css-field field-normal">
           <input id="field_1_1" type="text">
-          <label for="field_1_1">Banana</label>
+          <label for="field_1_1"><span data-content="Banana" class="label-text">Banana</span></label>
         </div>
         <div class="css-field field-normal">
           <input id="field_1_2" type="text">
-          <label for="field_1_2">Strawberry</label>
+          <label for="field_1_2"><span data-content="Strawberry" class="label-text">Strawberry</span></label>
         </div>
         <div class="css-field field-normal">
           <input id="field_1_3" type="text">
-          <label for="field_1_3">Avocado</label>
+          <label for="field_1_3"><span data-content="Avocado" class="label-text">Avocado</span></label>
         </div>
       </div>
       <div style="clear: both"></div>
@@ -65,15 +65,15 @@
       <div class="css-field-wrap">
         <div class="css-field field-collapse">
           <input id="field_2_1" type="text">
-          <label for="field_2_1">Banana</label>
+          <label for="field_2_1"><span data-content="Banana" class="label-text">Banana</span></label>
         </div>
         <div class="css-field field-collapse">
           <input id="field_2_2" type="text">
-          <label for="field_2_2">Strawberry</label>
+          <label for="field_2_2"><span data-content="Strawberry" class="label-text">Strawberry</span></label>
         </div>
         <div class="css-field field-collapse">
           <input id="field_2_3" type="text">
-          <label for="field_2_3">Avocado</label>
+          <label for="field_2_3"><span data-content="Avocado" class="label-text">Avocado</span></label>
         </div>
       </div>
       <div style="clear: both"></div>
@@ -85,15 +85,15 @@
       <div class="css-field-wrap">
         <div class="css-field field-bounce">
           <input id="field_3_1" type="text">
-          <label for="field_3_1">Banana</label>
+          <label for="field_3_1"><span data-content="Banana" class="label-text">Banana</span></label>
         </div>
         <div class="css-field field-bounce">
           <input id="field_3_2" type="text">
-          <label for="field_3_2">Strawberry</label>
+          <label for="field_3_2"><span data-content="Strawberry" class="label-text">Strawberry</span></label>
         </div>
         <div class="css-field field-bounce">
           <input id="field_3_3" type="text">
-          <label for="field_3_3">Avocado</label>
+          <label for="field_3_3"><span data-content="Avocado" class="label-text">Avocado</span></label>
         </div>
       </div>
       <div style="clear: both"></div>
@@ -105,15 +105,15 @@
       <div class="css-field-wrap">
         <div class="css-field field-slide">
           <input id="field_4_1" type="text">
-          <label for="field_4_1">Banana</label>
+          <label for="field_4_1"><span data-content="Banana" class="label-text">Banana</span></label>
         </div>
         <div class="css-field field-slide">
           <input id="field_4_2" type="text">
-          <label for="field_4_2">Strawberry</label>
+          <label for="field_4_2"><span data-content="Strawberry" class="label-text">Strawberry</span></label>
         </div>
         <div class="css-field field-slide">
           <input id="field_4_3" type="text">
-          <label for="field_4_3">Avocado</label>
+          <label for="field_4_3"><span data-content="Avocado" class="label-text">Avocado</span></label>
         </div>
       </div>
       <div style="clear: both"></div>
@@ -125,15 +125,15 @@
       <div class="css-field-wrap">
         <div class="css-field field-fall">
           <input id="field_5_1" type="text">
-          <label for="field_5_1">Banana</label>
+          <label for="field_5_1"><span data-content="Banana" class="label-text">Banana</span></label>
         </div>
         <div class="css-field field-fall">
           <input id="field_5_2" type="text">
-          <label for="field_5_2">Strawberry</label>
+          <label for="field_5_2"><span data-content="Strawberry" class="label-text">Strawberry</span></label>
         </div>
         <div class="css-field field-fall">
           <input id="field_5_3" type="text">
-          <label for="field_5_3">Avocado</label>
+          <label for="field_5_3"><span data-content="Avocado" class="label-text">Avocado</span></label>
         </div>
       </div>
       <div style="clear: both"></div>
@@ -145,15 +145,15 @@
       <div class="css-field-wrap">
         <div class="css-field field-flip">
           <input id="field_6_1" type="text">
-          <label for="field_6_1">Banana</label>
+          <label for="field_6_1"><span data-content="Banana" class="label-text">Banana</span></label>
         </div>
         <div class="css-field field-flip">
           <input id="field_6_2" type="text">
-          <label for="field_6_2">Strawberry</label>
+          <label for="field_6_2"><span data-content="Strawberry" class="label-text">Strawberry</span></label>
         </div>
         <div class="css-field field-flip">
           <input id="field_6_3" type="text">
-          <label for="field_6_3">Avocado</label>
+          <label for="field_6_3"><span data-content="Avocado" class="label-text">Avocado</span></label>
         </div>
       </div>
       <div style="clear: both"></div>
